solved aligning text on showcase

--- a/app/assets/stylesheets/components/_showcase.scss
+++ b/app/assets/stylesheets/components/_showcase.scss
@@ -4,10 +4,15 @@
   text-align: left;
   align-items: center;
 
+  h1 {
+    padding-left: 20px;;
+  }
+
 
   p {
     line-height: 10px;
     font-size: 20px;
+    padding-left: 20px;;
   }
 }
 
